[package]
name = "netbuf"
description = """
    The growable buffer object with right assumptions and interface. Tuned for
    using it for network buffers.
"""
readme = "README.rst"
keywords = ["buf", "netbuf", "network", "buffer", "buffers", "vec", "vector",
            "array", "grow"]
version = "0.1.0"
authors = ["Paul Colomiets <paul@colomiets.name>"]
license = "MIT"

[dev-dependencies]
mockstream = "*"

