[package]
name = "netbuf"
description = """
    The simple to use growable buffer object with right assumptions and
    interface. Tuned for using it for network buffers.
"""
readme = "README.rst"
keywords = ["buf", "netbuf", "network", "buffer", "vec"]
version = "0.3.7"
authors = ["Paul Colomiets <paul@colomiets.name>"]
license = "MIT"
documentation = "http://tailhook.github.io/netbuf/"
repository = "http://github.com/tailhook/netbuf"

[dev-dependencies]
mockstream = "0.0.2"

